feat: added unit test and fix some code
