# app/src/main/resources/swagger/api-docs.json
@@ -32,6 +32,9 @@
     "name" : "infocamere",
     "description" : "Info Camere Controller"
   }, {
+    "name" : "infocamere PDND",
+    "description" : "PDND Info Camere Controller"
+  }, {
     "name" : "institution",
     "description" : "Institution operations"
   }, {
@@ -1212,6 +1215,82 @@
         } ]
       }
     },
+    "/info-camere-pdnd/institutions" : {
+      "get" : {
+        "tags" : [ "infocamere PDND" ],
+        "summary" : "Get institutions by institution description",
+        "description" : "Get the list of companies represented by description of the institutions passed as a parameter",
+        "operationId" : "institutionsPdndByDescriptionUsingGET",
+        "parameters" : [ {
+          "name" : "description",
+          "in" : "query",
+          "description" : "swagger.api.info-camere-pdnd.institutions.description}",
+          "required" : true,
+          "style" : "form",
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/PDNDBusinessResource"
+                  }
+                }
+              }
+            }
+          },
+          "400" : {
+            "description" : "Bad Request",
+            "content" : {
+              "application/problem+json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Problem"
+                }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Unauthorized",
+            "content" : {
+              "application/problem+json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Problem"
+                }
+              }
+            }
+          },
+          "404" : {
+            "description" : "Not Found",
+            "content" : {
+              "application/problem+json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Problem"
+                }
+              }
+            }
+          },
+          "500" : {
+            "description" : "Internal Server Error",
+            "content" : {
+              "application/problem+json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/Problem"
+                }
+              }
+            }
+          }
+        },
+        "security" : [ {
+          "bearerAuth" : [ "global" ]
+        } ]
+      }
+    },
     "/stations" : {
       "get" : {
         "tags" : [ "stations" ],
@@ -1978,6 +2057,48 @@
           },
           "verificationResult" : {
             "type" : "boolean"
+          }
+        }
+      },
+      "PDNDBusinessResource" : {
+        "title" : "PDNDBusinessResource",
+        "type" : "object",
+        "properties" : {
+          "address" : {
+            "type" : "string"
+          },
+          "businessName" : {
+            "type" : "string"
+          },
+          "businessStatus" : {
+            "type" : "string"
+          },
+          "businessTaxId" : {
+            "type" : "string"
+          },
+          "cciaa" : {
+            "type" : "string"
+          },
+          "city" : {
+            "type" : "string"
+          },
+          "county" : {
+            "type" : "string"
+          },
+          "digitalAddress" : {
+            "type" : "string"
+          },
+          "legalNature" : {
+            "type" : "string"
+          },
+          "legalNatureDescription" : {
+            "type" : "string"
+          },
+          "nrea" : {
+            "type" : "string"
+          },
+          "zipCode" : {
+            "type" : "string"
           }
         }
       },
