# connector-api/src/main/java/it/pagopa/selfcare/party/registry_proxy/connector/api/PDNDNationalRegistriesConnector.java
@@ -6,6 +6,6 @@ import java.util.List;
 
 public interface PDNDNationalRegistriesConnector {
 
-    List<PDNDBusiness> institutionsPdndByDescription(String description);
+    List<PDNDBusiness> retrieveInstitutionsPdndByDescription(String description);
 
 }
