# connector/rest/src/main/java/it/pagopa/selfcare/party/registry_proxy/connector/rest/PDNDNationalRegistriesConnectorImpl.java
@@ -1,11 +1,11 @@
 package it.pagopa.selfcare.party.registry_proxy.connector.rest;
 
+import io.github.resilience4j.circuitbreaker.annotation.CircuitBreaker;
 import io.github.resilience4j.retry.annotation.Retry;
-import it.pagopa.selfcare.party.registry_proxy.connector.api.NationalRegistriesConnector;
+import it.pagopa.selfcare.commons.base.logging.LogUtils;
 import it.pagopa.selfcare.party.registry_proxy.connector.api.PDNDNationalRegistriesConnector;
-import it.pagopa.selfcare.party.registry_proxy.connector.model.nationalregistries.*;
+import it.pagopa.selfcare.party.registry_proxy.connector.model.GeographicTaxonomy;
 import it.pagopa.selfcare.party.registry_proxy.connector.model.nationalregistriespdnd.PDNDBusiness;
-import it.pagopa.selfcare.party.registry_proxy.connector.rest.client.NationalRegistriesRestClient;
 import it.pagopa.selfcare.party.registry_proxy.connector.rest.client.PDNDNationalRegistriesRestClient;
 import it.pagopa.selfcare.party.registry_proxy.connector.rest.model.*;
 import it.pagopa.selfcare.party.registry_proxy.connector.rest.model.mapper.PDNDBusinessMapper;
@@ -18,6 +18,7 @@ import java.util.List;
 @Slf4j
 @Service
 public class PDNDNationalRegistriesConnectorImpl implements PDNDNationalRegistriesConnector {
+    public static final String ERROR_PDND_NATIONAL_REGISTRIES_REST_CLIENT_MESSAGE = "Error pdnd-national-registries rest client, message: %s";
 
     private final PDNDNationalRegistriesRestClient pdndNationalRegistriesRestClient;
     private final PDNDBusinessMapper pdndBusinessMapper;
@@ -28,9 +29,21 @@ public class PDNDNationalRegistriesConnectorImpl implements PDNDNationalRegistri
     }
 
     @Override
+    @CircuitBreaker(name = "pdndNationalRegistriesCircuitbreaker", fallbackMethod = "fallbackRetrieveInstitutionByDescription")
     @Retry(name = "retryServiceUnavailable")
-    public List<PDNDBusiness> institutionsPdndByDescription(String description) {
-        return pdndBusinessMapper.toPDNDBusiness(pdndNationalRegistriesRestClient.getInstitutionPdndbyDescription(description));
+    public List<PDNDBusiness> retrieveInstitutionsPdndByDescription(String description) {
+        log.debug(LogUtils.CONFIDENTIAL_MARKER, "retrieveInstitutionsPdndByDescription description = {}", description);
+        Assert.hasText(description, "Description is required");
+
+        List<PDNDImpresa> result = pdndNationalRegistriesRestClient.retrieveInstitutionsPdndByDescription(description);
+
+        log.debug(LogUtils.CONFIDENTIAL_MARKER, "retrieveInstitutionsPdndByDescription result = {}", result);
+        return pdndBusinessMapper.toPDNDBusiness(result);
+    }
+
+    public List<PDNDBusiness> fallbackRetrieveInstitutionByDescription(RuntimeException e) {
+        log.error(String.format(ERROR_PDND_NATIONAL_REGISTRIES_REST_CLIENT_MESSAGE, e.getMessage()));
+        return List.of();
     }
 
 }
